[gd_scene load_steps=3 format=3 uid="uid://f7d1pd35oie5"]

[ext_resource type="PackedScene" uid="uid://0qsoub3pdeve" path="res://DiceRoll/roll_dice.tscn" id="1_5n7tl"]
[ext_resource type="Script" path="res://DiceRoll/roll_dice_window.gd" id="1_32r6j"]

[node name="RollDiceWindow" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32r6j")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(640, 480)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="RollDice" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_5n7tl")]
unique_name_in_owner = true
control_visible = false

[node name="RollButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -71.855
offset_right = 20.0
offset_bottom = -40.855
grow_horizontal = 2
grow_vertical = 0
text = "Roll"

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -72.0
offset_right = 125.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[node name="HeaderLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.0
offset_top = 46.0
offset_right = 77.0
offset_bottom = 80.0
grow_horizontal = 2
theme_type_variation = &"HeaderMedium"
text = "Header Label"

[node name="ResultLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 113.0
offset_right = 43.5
offset_bottom = 136.0
grow_horizontal = 2
text = "You rolled: "

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 51.0
grow_horizontal = 0
text = "Close"

[connection signal="on_roll_result" from="SubViewportContainer/SubViewport/RollDice" to="." method="_on_roll_result"]
[connection signal="pressed" from="RollButton" to="." method="roll"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
